--- a/online-tuition/src/main/resources/application.properties
+++ b/online-tuition/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 server.port=9191
+
+
+logging.level.root = INFO
+logging.pattern.console.=%d{yyyy-MM-dd HH:mm:ss} [%level] %logger{36} - %msg%n
